Add PaginatedList pagination support

--- a/static/css/paginated-list.css
+++ b/static/css/paginated-list.css
@@ -1,7 +1,9 @@
-.paginated-list .searcher {
+.paginated-list .searcher,
+.paginated-list .pagination-bar {
     display: none;
 }
 
-.paginated-list .searcher.visible {
+.paginated-list .searcher.visible,
+.paginated-list .pagination-bar.visible {
     display: block;
 }
